Remove dead code + fix CSS bug with usage graph (way too high on mobile)

--- a/htdocs/sass/nav/ipam.scss
+++ b/htdocs/sass/nav/ipam.scss
@@ -161,6 +161,11 @@ ul.accordion {
   margin-bottom: 5px;
 }
 
+// Avoid usage graph being too tall on small screens
+.prefix-usage-graph svg {
+  max-height: 40px;
+}
+
 
 @media #{$large-up} {
   .prefix-tree-item-title span {
